--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+annotated-types==0.7.0
 anyio==3.6.2
 click==8.1.3
-fastapi==0.92.0
+fastapi==0.115.12
 h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
-pydantic==1.10.4
-PySimpleGUI==4.60.4
+pydantic==2.10.6
+pydantic_core==2.27.2
+PySimpleGUI==5.0.8.2
 sniffio==1.3.0
-starlette==0.25.0
-typing_extensions==4.4.0
+starlette==0.46.1
+typing_extensions==4.12.2
 uvicorn==0.20.0
 zipp==3.13.0
